Learning how to create new routes/views.

--- a/outfit_generator/templates/layout.jinja2
+++ b/outfit_generator/templates/layout.jinja2
@@ -35,6 +35,7 @@
             {% block content %}
                 <p>No content</p>
             {% endblock content %}
+            <button type="button">Get Started!</button>
           </div>
         </div>
         <div class="row">
