--- a/outfit_generator/templates/mytemplate.jinja2
+++ b/outfit_generator/templates/mytemplate.jinja2
@@ -4,5 +4,8 @@
 <div class="content">
   <h1><span class="font-semi-bold">Pyramid</span> <span class="smaller">Starter project</span></h1>
   <p class="lead">Welcome to <span class="font-normal">{{project}}</span>, a&nbsp;Pyramid application generated&nbsp;by<br><span class="font-normal">Cookiecutter</span>.</p>
+
+  <form method="POST" action="http://localhost:6543/outfit_generator">
+   <p><input type="submit" value="Get Started!"> </p>
 </div>
 {% endblock content %}
